--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,17 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Binding delegate
+    def bindingVersion = "1.5.6"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$bindingVersion"
 
     // Lifecycle
     def lifecycleVersion = "2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
     // Room
     def roomVersion = "2.4.2"
@@ -58,7 +62,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$roomVersion"
 
     // Coroutines
-    def coroutinesVersion = "1.5.2"
+    def coroutinesVersion = "1.6.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
@@ -73,7 +77,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     // OkHTTP
-    def okhttpVersion = "4.9.0"
+    def okhttpVersion = "4.9.3"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
 
     // Navigation Components
